--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="vorwortImg">
                             <span>Von</span>
                             <a href="http://www.sermon-online.de/search.pl?lang=de&id=15403&title=&biblevers=&searchstring=&author=0&language=0&category=0&play=0&tm=2">
-                                <img src="./images/sermon_top.gif" alt="sermon">
+                                <img src="./images/sermon_top.gif">
                             </a>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                     werden?
                     <br> Es ist eine Sache zu wissen, was wir erreichen sollen, und eine andere, wie wir das erreichen können.
                 </p>
-                <a href="#home" class="home">Nach oben</a>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
         <article class="tab">
@@ -84,7 +84,7 @@
                     <br> Die Verse, die er zitierte, trafen immer ins Schwarze – er hatte immer genau die richtigen Worte für
                     die betreffende Situation
                 </p>
-                <a href="#home" class="home">Nach oben</a>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
         <article class="tab">
@@ -100,7 +100,7 @@
                     </p>
                 </blockquote>,
                 <p> der seine Lust hatte am Gesetz des Herrn und über sein Gesetz nachsann Tag und Nacht</p>
-                <a href="#home" class="home">Nach oben</a>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
         <article class="tab">
@@ -109,18 +109,16 @@
             <div class="tab-content">
                 <p>Der höchste Ausdruck der Anbetung unseres Herrn war sein Opfertod auf Golgatha im Gehorsam gegenüber dem
                     Willen seines Vaters.</p>
-                <a href="#home" class="home">Nach oben</a>
+                <a href="#home" alt="Home" class="home">Nach oben</a>
             </div>
         </article>
     </main>
 
     <footer>
-        <nav class="navFooter">
-            <ul>
-                <li><a href="#">Links</a></li>
-                <li><a href="#">Impressum</a></li>
-                <li><a href="#">Über mich</a></li>
-            </ul>
+        <nav>
+            <a href="#">Links</a>
+            <a href="#">Impressum</a>
+            <a href="#">Über mich</a>
         </nav>
         <p>Autor: Schmid Lothar Aktualisiert: 7.2.2018</p>
     </footer>
